<resources>
    <string name="app_name">Guess The Number</string>
    <string name="game_logo">Game Logo</string>
    <string name="game_title">Guess The Number??</string>
    <string name="intro_msg">Welcome!
        I\'ll choose a number, Guess it and you will be rewarded with a meme!
        Tell me how many digits you want to guess?</string>
    <string name="two_digit">Two Digit Number</string>
    <string name="three_digit">Three Digit Number</string>
    <string name="four_digit">Four Digit Number</string>
    <string name="start_button">Start</string>
    <string name="last_guess">Your Last Guess: </string>
    <string name="lives">Guesses Remaining: </string>
    <string name="hotter_colder">Hotter</string>
    <string name="guess_hint">Guess The Number</string>
    <string name="guess">Guess</string>
</resources>